# devcontainer-cpp-console

./: README.md
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/containers/main/: Dockerfile  download_strip.sh  startup.sh
app/: .gitignore  CMakeLists.txt
app/build-scripts/: build-libs-dynamic.sh  build-libs.sh  build.sh  strip-tag.txt  strip.sh
app/example/libtest/: .gitignore  how-to-test-macos.txt  how-to-test-on-macos.txt  main.cpp  random_utils.h
app/lib/random_utils/: random_utils.cpp  random_utils.h  random_utils_c.cpp  random_utils_c.h
app/lib/string_utils/: string_utils.cpp  string_utils.h  string_utils_c.cpp  string_utils_c.h
app/src/: main.cpp
